--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,16 @@ requires-python = ">=3.12"
 dependencies = [
     "langgraph==0.3.27",
     "python-dotenv==1.1.0",
-    "pydantic==2.11.2"
+    "pydantic==2.11.2",
+    "pydantic-settings==2.8.1",
+    "langchain-google-genai==2.1.2",
+    "langchain-mcp-adapters==0.0.7",
+    "mcp==1.6.0",
 ] 
+
+[dependency-groups]
+dev = [
+    "pytest==8.3.5",
+    "pytest-asyncio==0.26.0",
+    "pytest-dotenv==0.5.2",
+]
